--- a/views/theme/assets/scss/breadcrumbs.scss
+++ b/views/theme/assets/scss/breadcrumbs.scss
@@ -1,24 +1,33 @@
-$breadcrumbs-height: 40px;
-
 #breadcrumbs {
+  display: flex;
+  flex-wrap: wrap;
+  align-content: stretch;
+  justify-content: flex-start;
+  align-items: center;
   color: white;
   background-color: palette(neutral7);
-  padding: 2px 0 2px 16px;
+  padding: 2px 16px;
   box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.2),
     0px 0px 1px 0px rgba(0, 0, 0, 0.14),
     0px 0px 3px 0px rgba(0, 0, 0, 0.12);
-  max-height: $breadcrumbs-height;
 
   i {
-    font-size: 1.125rem;
+    user-select: none;
+    pointer-events: none;
+    cursor: unset;
   }
 
   .mdc-button {
     color: white;
+    min-width: unset;
   }
-}
 
-#chevron {
-  color: white;
-  font-size: 1.0rem;
+  .mdc-button + .v-typography {
+    color: white;
+    line-height: inherit;
+    font-size: inherit;
+    user-select: none;
+    pointer-events: none;
+    cursor: unset;
+  }
 }
